<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chat"
        android:title="@string/Chat"
        android:icon="@drawable/ic_chat_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_account"
        android:title="@string/Account"
        android:icon="@drawable/ic_person_24dp"
        app:showAsAction="ifRoom"/>
    <!--<item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/Settings"
        app:showAsAction="collapseActionView" />-->
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/LogOut"
        app:showAsAction="ifRoom"/>

</menu>